manifests/bootstrapping/05-argocd/networking/external-dns.yaml

apiVersion: v1
kind: Service
metadata:
  name: argocd-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.robotwizard.co.uk
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: argocd.robotwizard.co.uk
  sessionAffinity: None
