manifests/bootstrapping/05-argocd/networking/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.hacksm.net
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: nginx.hacksm.net
  sessionAffinity: None
