manifests/bootstrapping/05-argocd/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.hacksm.net
    secretName: argo-cert
  rules:
  - host: argo.hacksm.net
    http:
      paths:
      - backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
